--- a/Neuronet/Assembly-CSharp.csproj
+++ b/Neuronet/Assembly-CSharp.csproj
@@ -59,9 +59,12 @@
     <Compile Include="Assets\Scripts\Enemies\AgentOrangeGunnerController.cs" />
     <Compile Include="Assets\Scripts\Enemies\AgentGunner.cs" />
     <Compile Include="Assets\Scripts\Data.cs" />
+    <Compile Include="Assets\Scripts\Enemies\AgentLilacController.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterAmmoDamage.cs" />
+    <Compile Include="Assets\Scripts\Scenes.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Observer.cs" />
+    <Compile Include="Assets\Scripts\ChangeScene.cs" />
     <Compile Include="Assets\Scripts\Enemies\AgentGunnerState.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterShooting.cs" />
     <Compile Include="Assets\Scripts\Character\BulletController.cs" />
@@ -72,16 +75,15 @@
     <Compile Include="Assets\Scripts\MenuAndUI\UIController.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterMovement.cs" />
     <Compile Include="Assets\Scripts\Snowball.cs" />
-    <Compile Include="Assets\Scripts\Enemies\AgentRedController.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterAttributes.cs" />
     <Compile Include="Assets\Scripts\InputController.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\Enemies\AgentYellowGunnerController.cs" />
     <Compile Include="Assets\Scripts\Enemies\AgentBulletController.cs" />
     <Compile Include="Assets\Scripts\Enemies\AgentBlueRoseController.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyType.cs" />
     <Compile Include="Assets\Scripts\Character\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\MenuAndUI\Scenes.cs" />
-    <Compile Include="Assets\Scripts\ChangeScene.cs" />
+    <Compile Include="Assets\Scripts\Enemies\SpawnController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
