--- a/Neuronet/Assembly-CSharp.csproj
+++ b/Neuronet/Assembly-CSharp.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Assets\Scripts\MenuAndUI\MenuText.cs" />
     <Compile Include="Assets\Scripts\MenuAndUI\UIController.cs" />
     <Compile Include="Assets\Scripts\Character\CharacterMovement.cs" />
-    <Compile Include="Assets\Scripts\EndGameController.cs" />
+    <Compile Include="Assets\Scripts\GameStateController.cs" />
     <Compile Include="Assets\Scripts\CurrentGameSessionTime.cs" />
     <Compile Include="Assets\Scripts\InputController.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
